--- a/package.json
+++ b/package.json
@@ -1,37 +1,25 @@
 {
-  "name": "ytdl-core",
-  "description": "Youtube video downloader in pure javascript.",
-  "keywords": [
-    "youtube",
-    "video",
-    "download"
-  ],
-  "version": "0.5.1",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/fent/node-ytdl-core.git"
-  },
-  "author": "Roly Fentanes (https://github.com/fent)",
-  "main": "./lib/index.js",
+  "name": "node-js-getting-started",
+  "version": "0.1.3",
+  "description": "A sample Node.js app using Express 4",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec -t 16000 test/*-test.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "cheerio": "~0.19.0",
-    "jstream": "~0.2.7",
-    "request": "^2.37.0",
-    "underscore": "^1.6.0"
+    "express": "~4.9.x"
   },
-  "devDependencies": {
-    "assert-diff": "^1.0.1",
-    "mocha": "*",
-    "nock": "*",
-    "stream-equal": "~0.1.0"
+  "engines": {
+    "node": "0.12.2"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://github.com/fent/node-ytdl-core/raw/master/LICENSE"
-    }
-  ]
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
